# Long-Neck

./: CMakeLists.txt  cartesian_motion_node.cpp  current movement  data.yaml  movement  package.xml  realrobot movement
Visual/: CMakeLists.txt  data.yaml  package.xml
Visual/install/: local_setup.sh  setup.sh
Visual/install/Visual/lib/Visual/: cartesian_node  location_node  recognition_node  yolo_visualiser
Visual/log/: latest_build
Visual/runs/train/bottle_lid_yolo/: args.yaml  results.csv
Visual/scripts/: convert_via_to_yolo.py  train_yolo.py
Visual/src/: Cartesian.cpp  Imageoverlay.cpp  OpenCv.cpp  PCL.cpp  Recognition.cpp  best_params.json  camera_node.cpp  detector  detector.cpp  fusion.cpp  location.cpp  main.cpp  yolo_visualiser.cpp
Visual/yolo_data/: data.yaml
Visual/yolo_data/labels/: train.cache  val.cache
Visual/yolo_data/labels/train/: Test3.txt  Test4.txt  Test6.txt
Visual/yolo_data/labels/val/: Test10.txt
drink_memory/: package.xml
drink_memory/drink_memory/: bottlelid.py  drink_memory_node.py
runs/train/bottle_lid_yolo/: args.yaml  results.csv
src/: ur3_cartesian_motion_node.cpp
src/drink_memory/: package.xml  setup.cfg  setup.py
src/drink_memory/drink_memory/: bottlelid.py  drink_memory_node.py
src/install/ur3_cartesian_motion/lib/ur3_cartesian_motion/: ur3_cartesian_motion_node
src/install/ur3_cartesian_motion/share/ur3_cartesian_motion/: package.sh
src/log/: latest_build
src/ur3_cartesian_motion/: CMakeLists.txt  package.xml
src/ur3_cartesian_motion/install/: local_setup.sh  setup.sh
src/ur3_cartesian_motion/install/ur3_cartesian_motion/lib/ur3_cartesian_motion/: ur3_cartesian_motion_node
src/ur3_cartesian_motion/install/ur3_cartesian_motion/share/ur3_cartesian_motion/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/ur3_cartesian_motion/log/: latest_build
src/ur3_cartesian_motion/src/: ur3_cartesian_motion_node.cpp
src/visual/: CMakeLists.txt  check.py  via_region_data.json
src/visual/Testmodels/: augment_brands.py
src/visual/Testmodels/BottleEsky/: truth.csv
src/visual/dataset/brand_detection/brand_v1/: results.csv
src/visual/dataset/brand_detector/labels/: train.cache  val.cache
src/visual/dataset/brand_detector/labels/train/: 27f1da78-Screenshot_from_2025-04-25_19-22-11.txt  28be0953-Screenshot_from_2025-04-25_19-22-36.txt  847759d5-Screenshot_from_2025-04-25_19-23-10.txt  bd51bf9b-Screenshot_from_2025-04-25_19-22-52.txt
src/visual/dataset/brand_detector/labels/val/: 6d29091e-Screenshot_from_2025-04-25_19-22-56.txt
src/visual/dataset/brands_aug/: brands_cls.yaml  val.cache
src/visual/dataset/labels/: val.cache
src/visual/dataset/labels/train/: Test7.txt  Test8.txt
src/visual/dataset/labels/val/: Test1.txt  Test2.txt
src/visual/install/: local_setup.sh
src/visual/install/Visual/lib/Visual/: brand_node
src/visual/install/Visual/share/Visual/: local_setup.sh  package.bash  package.ps1  package.sh
src/visual/install/visual/lib/visual/: cartesian  esky_detector  fusion_node
src/visual/install/visual/share/ament_index/resource_index/parent_prefix_path/: visual
src/visual/install/visual/share/visual/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1
src/visual/launch/: pipeline.launch.py
src/visual/model/: brand_names.yaml
src/visual/runs/classify/brand_cls/: args.yaml  results.csv
src/visual/runs/classify/brand_cls/weights/: last.pt
src/visual/scripts/: calibrate_charuco.py  train_bottle_model.py  train_yolo.py
src/visual/src/: CropNode.cpp  camera_node.cpp  main.cpp
ur3_cartesian_motion/: package.xml;  terminalreadme
ur3_cartesian_motion/src/: ur3_cartesian_motion_node.cpp
visual/: CMakeLists.txt
visual/Testmodels/BottleEsky/: truth.csv
visual/dataset/: data.yaml  view_labels.py
visual/dataset/brand_detection/brand_v1/: args.yaml
visual/dataset/brand_detector/: data.yaml
visual/dataset/brand_detector/labels/train/: 017cb2ed-Screenshot_from_2025-04-25_19-23-35.txt  b64867a9-Screenshot_from_2025-04-25_19-22-18.txt  b6f3f8a3-Screenshot_from_2025-04-25_19-23-02.txt  b7f44ae5-Screenshot_from_2025-04-25_19-23-00.txt  dfd2fc61-Screenshot_from_2025-04-25_19-22-28.txt  f54dffd5-Screenshot_from_2025-04-25_19-23-38.txt
visual/dataset/brand_detector/labels/val/: 4ebf2b53-Screenshot_from_2025-04-25_19-22-43.txt
visual/dataset/brands_aug/: train.cache
visual/dataset/labels/: train.cache
visual/dataset/labels/all/: Test5.txt  Test9.txt
visual/dataset/labels/val/: Test11.txt
visual/install/: setup.sh
visual/install/Visual/lib/Visual/: camera_node  main_demo
visual/install/Visual/share/Visual/: local_setup.dsv  package.dsv  package.xml  package.zsh
visual/install/Visual/share/ament_index/resource_index/parent_prefix_path/: Visual
visual/install/visual/lib/visual/: bottle_detector_ort  brand_recognition  camera_node
visual/install/visual/share/visual/: package.bash  package.sh  package.zsh
visual/log/: latest_build
visual/runs/classify/brand_cls/weights/: best.pt
visual/runs/detect/train/: args.yaml  results.csv
visual/runs/train/bottle_lid_yolo/: args.yaml  results.csv
visual/scripts/: calibrate_charuco.py  convert_via_to_yolo.py  train_brand.py
visual/src/: BottleDetector.cpp  BrandRecognition.cpp  Cartesian.cpp  EskyDetector.cpp  camera_node.cpp  main2
