<?xml version="1.0"?>
<package format="3">
  <name>drink_memory</name>
  <version>0.1.0</version>
  <description>Decoupled search logic and UR3 motion nodes for drink retrieval.</description>
  <maintainer email="jorian.p.mitchell@outlook.com">parallels</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>        <!-- for Point messages -->
  <!-- <depend>trajectory_msgs</depend>      for JointTrajectory -->
  <depend>builtin_interfaces</depend>   <!-- for Duration -->

  <!-- (Optional) test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

<!-- <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drink_memory</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jorian.p.mitchell@outlook.com">parallels</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> -->
